@startuml

title __METRICSYSTEMS's Class Diagram__\n

  namespace metricSystems {
    interface metricSystems.IMetricSystem {
        {abstract} + addConverter()
        {abstract} + base()
        {abstract} + getConverter()
        {abstract} + units()
    }
  }
  

  namespace metricSystems {
    interface metricSystems.IMetricSystemConverter {
        {abstract} + reverse()
        {abstract} + sourceSystem()
        {abstract} + targetSystem()
        {abstract} + transformTo()
    }
  }
  

  namespace metricSystems {
    abstract class metricSystems.MetricSystem {
        - converters : Set<IMetricSystemConverter>
        - units : Collection<IPhysicalUnit>
        + addConverter()
        + base()
        + getConverter()
        + units()
        # MetricSystem()
    }
  }
  

  namespace metricSystems {
    class metricSystems.MetricSystemConverter {
        - factor : double
        + MetricSystemConverter()
        + equals()
        + reverse()
        + sourceSystem()
        + targetSystem()
        + transformTo()
    }
  }
  

  metricSystems.MetricSystem .up.|> metricSystems.IMetricSystem
  metricSystems.MetricSystem o-- units.IPhysicalUnit : base
  metricSystems.MetricSystemConverter .up.|> metricSystems.IMetricSystemConverter
  metricSystems.MetricSystemConverter o-- metricSystems.IMetricSystem : source
  metricSystems.MetricSystemConverter o-- metricSystems.IMetricSystem : target


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
